# Blendest

./: .gitignore  README.md  someData.json
Client/: CMakeLists.txt  dependencies.cmake  functions.cmake  main.cpp
Client/App/: App.cpp  CMakeLists.txt
Client/App/Model/: CMakeLists.txt
Client/App/Model/Blender/: CMakeLists.txt  Handle.cpp  Settings.cpp
Client/App/Model/Blender/assets/: BlenderFileInfo.py  BlenderPreferences.py  redditpost.md
Client/App/Model/Blender/public/Model/Blender/: Handle.hpp  Settings.hpp
Client/App/Model/Files/: CMakeLists.txt  FileManager.cpp
Client/App/Model/Files/public/Model/Files/: FileManager.hpp
Client/App/Model/Main/: CMakeLists.txt  Main.cpp
Client/App/Model/Main/public/Model/Main/: Main.hpp
Client/App/Model/Serializer/: CMakeLists.txt  Serializer.cpp
Client/App/Model/Server/: CMakeLists.txt  Connection.cpp
Client/App/Model/Server/public/: Connection.hpp
Client/App/Model/Server/public/Model/Server/: Connection.hpp
Client/App/Model/Tasks/: CMakeLists.txt
Client/App/Model/Tasks/Blender/: RenderTask.cpp
Client/App/Model/Tasks/public/Model/Tasks/: ITask.hpp
Client/App/Model/Tasks/public/Model/Tasks/Blender/: RenderTask.hpp
Client/App/View/: CMakeLists.txt  Connection.cpp  Main.cpp  Settings.cpp  TestButton.cpp
Client/App/View/public/Component/: Connection.hpp
Client/App/View/public/View/Component/: Connection.hpp  Settings.hpp  TestButton.hpp
Client/App/View/public/View/View/: Main.hpp
Client/App/ViewModel/: App.cpp  CMakeLists.txt  Connection.cpp  Settings.cpp
Client/App/ViewModel/Serializer/: CMakeLists.txt  Serializer.cpp
Client/App/ViewModel/Serializer/public/ViewModel/Serializer/: Serializer.hpp
Client/App/ViewModel/public/ViewModel/: App.hpp  Connection.hpp  Settings.hpp
Client/Connection/: BackgroundWebsocket.cpp  CMakeLists.txt  HandlerPayload.cpp  HandlerPayload.hpp  HandlerThread.cpp  HandlerThread.hpp  IListener.cpp  ServerConnection.cpp  WebsocketConnection.cpp  test.cpp
Client/Connection/public/: BackgroundWebsocket.hpp  IListener.hpp  ServerConnection.hpp  WebsocketConnection.hpp
Client/Model/: BlenderTask.cpp  CMakeLists.txt  Connection.cpp  Main.cpp  Settings.cpp  TaskRunner.cpp
Client/Model/Assets/: Assets.cpp  BlenderFileInfo.py  CMakeLists.txt
Client/Model/Assets/public/Model/Assets/: Assets.hpp
Client/Model/Serializer/: CMakeLists.txt  Fields.hpp
Client/Model/Serializer/public/Serializer/: Serializer.hpp
Client/Model/public/: Connection.hpp  Main.hpp  Settings.hpp
Client/Model/public/Model/: BlenderTask.hpp  Connection.hpp  ITask.hpp  Main.hpp  Settings.hpp  TaskQueue.hpp  TaskRunner.hpp
Client/Modules/: CMakeLists.txt
Client/Modules/Network/: CMakeLists.txt  HttpSession.cpp  HttpSessionPayload.cpp  HttpSessionPayload.hpp  Websocket.cpp  WebsocketPayload.cpp  WebsocketPayload.hpp
Client/Modules/Network/public/Network/: Buffer.hpp  HttpSession.hpp  Websocket.hpp
Client/Modules/System/: CMakeLists.txt  Process.cpp
Client/Network/: BackgroundWebsocket.cpp  CMakeLists.txt  HandlerPayload.cpp  HandlerPayload.hpp  HttpSession.cpp  HttpSessionPayload.cpp  HttpSessionPayload.hpp  Websocket.cpp  WebsocketPayload.cpp  WebsocketPayload.hpp
Client/Network/public/: IListener.hpp
Client/Network/public/Network/: BackgroundWebsocket.hpp  Error.hpp  HttpSession.hpp  IListener.hpp  Websocket.hpp  WebsocketStatus.hpp
Client/System/: CMakeLists.txt  Process.cpp
Client/System/Windows/: Process.cpp
Client/System/public/: Process.hpp
Client/System/public/System/: Process.hpp
Client/UI/: CMakeLists.txt  Connection.cpp  Main.cpp  Settings.cpp
Client/UI/components/: CMakeLists.txt  Connection.cpp  Settings.cpp
Client/UI/components/public/: Connection.hpp  Settings.hpp
Client/UI/public/UI/Component/: Connection.hpp  Settings.hpp
Client/UI/public/UI/View/: Main.hpp
Client/UI/public/components/: Connection.hpp  Settings.hpp
Client/UI/public/views/: Main.hpp
Client/UI/views/: CMakeLists.txt
Client/UI/views/public/: Main.hpp
Client/assets/: config.js
Client/components/: CMakeLists.txt  Settings.cpp
Client/components/public/: Settings.hpp
Client/test/: test.blend1
Server/Backend/: package-lock.json  package.json  tsconfig.json
Server/Backend/Assets/test/: test.blend
Server/Backend/src/: index.ts
Server/Backend/src/Network/: ClientConnection.ts  ConnectionManager.ts
